--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
     font-family: Montserrat, 'sans-serif';
     height: 100%;
 }
+body._lock {
+    overflow: hidden;
+}
 
 [class*="__container"] {
     max-width: 82rem;
@@ -15,7 +18,6 @@ body {
     min-height: 100vh;
     color: #333333;
 }
-
 .header {
     background-color: #fed100;
 }
@@ -33,18 +35,21 @@ body {
 }
 .header__menu {
     flex: 1 1 auto;
-}
-.header__phone {
-}
-.menu {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+.menu__body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.menu__item:nth-child(1) {
+    display: none;
 }
 .menu__list {
+    padding-right: 13.5rem;
     display: flex;
     gap: 2.8rem;
-}
-.menu__item {
 }
 .menu__link {
     font-weight: 500;
@@ -54,10 +59,16 @@ body {
 .header__phone {
     font-size: 1.5rem;
     font-weight: 600;
-    text-decoration: underline;
 }
 .phone__number {
     color: #333333;
+    padding-bottom: 0.1rem;
+}
+.phone__number-underline {
+    width: 195px;
+    border: 1px solid;
+    padding: 0;
+    border-radius: 1px;
 }
 .header__burger {
     display: none;
@@ -70,6 +81,9 @@ body {
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
+}
+.arrow__menu {
+    display: none;
 }
 .icon-menu::before,
 .icon-menu::after {
@@ -633,7 +647,6 @@ iframe {
     gap: 12.5rem;
 }
 .footer__logo {
-
     font-size: 1.87rem;
     font-weight: 600;
     color: #333333;
@@ -691,24 +704,76 @@ iframe {
     gap: 3.43rem;
 }
 
-@media (max-width: 64rem) {
+@media (max-width: 66rem) {
     [class*="__container"] {
         max-width: 44.1rem;
     }
     .header__container {
         margin-top: 1.3rem;
+        display: flex;
+        min-height: 0;
     }
     .header__logo {
         font-size: 2.25rem;
     }
     .header__menu {
-        display: block;
+        padding-left: 0;
     }
     .menu__item {
-        display: none;
+        padding-left: 2.3rem;
+    }
+    .menu__item:nth-child(1) {
+        display: block;
+    }
+    .menu__list {
+        flex-direction: column;
+        display: flex;
+        gap: 2.5rem;
+        padding-bottom: 3.5rem;
+    }
+    .menu__item:nth-child(1) {
+        display: block;
+        background-color: #000000;
+        width: 18.75rem;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .menu__item:nth-child(1) .menu__link {
+        color: #f2f2f2;
+    }
+    .menu__body {
+        margin-top: -1.3rem;
+        justify-content: normal;
+        flex-direction: column;
+        align-items: normal;
+
+        position: fixed;
+        right: 0;
+        background-color: #fff;
+        height: 64rem;
+        width: 18.75rem;
+        border-top-left-radius: 2rem;
+        border-bottom-left-radius: 2rem;
+        transform: translateX(+800px);
+        z-index: 3;
+        transition: 0.3s ease;
+    }
+    .arrow__menu {
+        display: inline-flex;
+        justify-content: flex-end;
+        padding-top: 1.68rem;
+        padding-right: 2.8rem;
+        padding-bottom: 7.37rem;
+        cursor: pointer;
+    }
+    .menu__body.show {
+        transform: translateX(0px);
+    }
+    .menu__link {
+        font-size: 1.75rem;
     }
     .header__phone {
-        display: none;
+        padding-left: 3rem;
     }
     .header__burger {
         display: block;
@@ -1198,15 +1263,58 @@ iframe {
     }
     .header__logo {
         font-size: 1rem;
-    }
-    .header__menu {
-        display: block;
+        z-index: 4;
     }
     .menu__item {
-        display: none;
+        padding-left: 2.75rem;
+    }
+    .menu__list {
+        flex-direction: column;
+        display: flex;
+        gap: 1.25rem;
+        padding-bottom: 3rem;
+    }
+    .menu__item:nth-child(1) {
+        display: block;
+        background-color: #000000;
+        width: 50rem;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .menu__item:nth-child(1) .menu__link {
+        color: #f2f2f2;
+    }
+    .menu__body {
+        margin-top: -1.7rem;
+
+        height: 64rem;
+        width: 100%;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        transform: translateX(+800px);
+        z-index: 3;
+        transition: 0.3s ease;
+    }
+    .arrow__menu {
+        padding-top: 2rem;
+        padding-right: 0.93rem;
+        padding-bottom: 4.32rem;
+    }
+    .arrow-menu-img {
+        width: 0.6rem;
+        height: 1.25rem;
+    }
+    .menu__body.show {
+        transform: translateX(0px);
     }
     .header__phone {
-        display: none;
+        padding-left: 4.75rem;
+    }
+    .phone__number {
+        font-size: 1.1rem;
+    }
+    .phone__number-underline {
+        width: 9rem;
     }
     .header__burger {
         display: block;
